[package]
name = "railway-cron"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
anyhow = "1.0.95"
reqwest = { version = "0.12.12", features = ["blocking"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 'z'
panic = 'abort'
strip = true


[lints.clippy]
complexity = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
